# peal-network

./: Cargo.toml  PROGRESS.md  README.md  SECURITY.md  brand.md  justfile  pnpm-lock.yaml  railway.explorer.json  railway.json
.cargo/: config.toml
.prism/: project-model.md
contracts/: foundry.toml
contracts/script/: DeployMempool.s.sol
contracts/src/: BteAnchor.sol
contracts/test/: BteAnchor.t.sol
crates/bte-cli/: Cargo.toml
crates/bte-cli/src/: main.rs
crates/bte-coordinator/: Cargo.toml
crates/bte-coordinator/src/: api.rs  db.rs  engine.rs  state.rs
crates/bte-crypto/benches/: bte_ops.rs
crates/bte-crypto/examples/: mempool_scaling.rs
crates/bte-node/: Cargo.toml
crates/bte-node/src/: keystore.rs  lib.rs  main.rs
crates/bte-wasm/: Cargo.toml
crates/bte-wasm/src/: lib.rs
demos/sealed-bid/: index.ts  package.json
docker/: Dockerfile  Dockerfile.railway  docker-compose.byzantine.yml  docker-compose.yml  start-railway.sh
docs/: deploy-mempool-railway.md  launch.md  protocol.html  quickstart.md
docs/plans/: 001-peal-next-plan.md
scripts/menubar/: README.md  bte.30s.sh
spec/: ROADMAP.md
