[workspace]
resolver = "2"
members = [
    "crates/bte-crypto",
    "crates/bte-node",
    "crates/bte-coordinator",
    "crates/bte-cli",
    "crates/bte-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/Adityaakr/bte"

[workspace.dependencies]
bte-crypto = { path = "crates/bte-crypto", features = ["full"] }
simple-bte = { package = "simple-batched-threshold-encryption", git = "https://github.com/commonwarexyz/simple-bte", rev = "147a08788f6c9b25b52dc58f03518ac30e94d5b8", default-features = false }
ark-bls12-381 = "0.6.0"
ark-ec = "0.6.0"
ark-ff = "0.6.0"
ark-serialize = "0.6.0"
ark-std = "0.6.0"
sha2 = "0.10"
thiserror = "2"
hex = "0.4"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }

[profile.dev]
opt-level = 3

[profile.release]
lto = "thin"
