[package]
name = "bte-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "bte-cli: ceremony, committee init, dev helpers"

[dependencies]
bte-crypto = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
bte-node = { version = "0.1.0", path = "../bte-node" }
tokio = { workspace = true, features = ["full"] }
serde_json = "1.0.150"
base64 = "0.22.1"
hex.workspace = true
