[package]
name = "bte-coordinator"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "bte coordinator: registry + condition engine + aggregator + REST + sqlite"

[dependencies]
bte-crypto = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
base64 = "0.22.1"
hex.workspace = true
rusqlite = { version = "0.40.1", features = ["bundled"] }
sha2.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
rand_chacha = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
