[package]
name = "bte-node"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "bte operator node: poll work, compute partials, post shares"

[dependencies]
bte-crypto = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
base64 = "0.22.1"
hex.workspace = true
sha2.workspace = true
clap = { workspace = true, features = ["derive"] }
toml = "1.1.2"
chacha20poly1305 = "0.11.0"
argon2 = "0.5.3"
ark-bls12-381.workspace = true
ark-ec.workspace = true

[dev-dependencies]
rand_chacha = "0.3"
